--- a/src/Components/Matrixes/Matrix/Matrix.css
+++ b/src/Components/Matrixes/Matrix/Matrix.css
@@ -1,8 +1,6 @@
 .Matrix {
-	width: 60%;
-	margin: 16px auto;
-	border: 1px solid #eee;
-	box-shadow: 2px 3px #ccc;
-	padding: 16px;
-	text-align: center;
+	height: 50px;
+	width: 50px;
+	background-color: LightGrey;
+	border-style: solid;
 }
