Back up, with name changing

--- a/src/Components/Matrix/Matrix.css
+++ b/src/Components/Matrix/Matrix.css
@@ -1,11 +1,11 @@
-.Matrix0 {
+.Cell0 {
 	height: 50px;
 	width: 50px;
 	background-color: LightGrey;
 	border-style: solid;
 }
 
-.Matrix1 {
+.Cell1 {
 	height: 50px;
 	width: 50px;
 	background-color: Red;
