Rendering a 10x10 matrix. Each row of 10 has its own div

--- a/src/Components/Matrix/Cell.css
+++ b/src/Components/Matrix/Cell.css
@@ -2,7 +2,7 @@
 	height: 25px;
 	width: 25px;
 	background-color: LightGrey;
-	border-style: solid;
+	border: 1px solid black;
 	float: left;
 }
 
@@ -10,6 +10,6 @@
 	height: 25px;
 	width: 25px;
 	background-color: Red;
-	border-style: solid;
+	border: 1px solid black;
 	float: left;
 }
