Added some css to buttons in App component.

--- a/src/App.css
+++ b/src/App.css
@@ -2,11 +2,22 @@
 	text-align: center;
 }
 
-.red {
-	color: red;
-}
-
 .bold {
 	font-weight: bold;
+}
+
+button {
+	background-color: rgb(14, 131, 248);
+	border: none;
+	border-radius: 4px;
+	color: white;
+	text-align: center;
+	padding: 10px 24px;
+	font-size: 16px;
+	display: inline-block;
+}
+
+button:hover {
+	background-color: rgb(62, 155, 248);
 }
 
