--- a/src/App.css
+++ b/src/App.css
@@ -6,15 +6,23 @@
 	font-weight: bold;
 }
 
-h1 {
-	font-family: 'Roboto', sans-serif;
-	font-weight: 800;
-	font-size: 40px;
+
+#display-wrap {
+	overflow-y: scroll;
+}
+
+#buttons {
+	display: flex;
+	flex-direction: row;
+	justify-content: flex-start;
 }
 button {
+	flex-basis: 15%;
 	background-color: rgb(14, 131, 248);
 	border: none;
 	border-radius: 4px;
+	margin-right: 20px;
+	margin-left: 20px;
 	color: white;
 	text-align: center;
 	padding: 10px 24px;
@@ -30,10 +38,8 @@ button:hover {
 button:disabled {
 	background-color: rgb(119, 111, 110);
 	opacity: 0.2;
+	cursor: not-allowed;
 }
 
-button#github_button {
-	background-color: rgb(236, 233, 233);
-	color: rgb(31, 31, 31);
-}
+
 
