--- a/src/Components/Matrix/Cell.css
+++ b/src/Components/Matrix/Cell.css
@@ -1,15 +1,8 @@
 .Cell0 {
-	height: 40px;
-	width: 40px;
-	background-color: LightGrey;
-	border: 1px solid black;
+	height: 35px;
+	width: 35px;
+	
 	float: left;
-}
-
-.Cell1 {
-	height: 25px;
-	width: 25px;
-	background-color: Red;
-	border: 1px solid black;
-	float: left;
+	margin-right: 5px;
+	margin-bottom: 5px;
 }
