--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,7 @@ button {
 	border: none;
 	border-radius: 4px;
 	margin-right: 20px;
-	margin-left: 20px;
+	margin-left: 40px;
 	color: white;
 	text-align: center;
 	padding: 10px 24px;
@@ -41,5 +41,17 @@ button:disabled {
 	cursor: not-allowed;
 }
 
+#display-wrap {
+	display: flex;
+	flex-direction: row;
+}
 
+#introduction-text {
+	width: 49%;
+	padding: 40px;
+}
+
+#introduction-images {
+	width: 49%;
+}
 
