--- a/src/Components/Layout/Header.css
+++ b/src/Components/Layout/Header.css
@@ -10,7 +10,7 @@
     padding-top: 10px;
     height: 80px;
     width: 65%;
-    padding-left: 60px;
+    padding-left: 10%;
 	font-family: 'Roboto', sans-serif;
 	font-weight: 800;
     font-size: 40px;
