--- a/src/App.css
+++ b/src/App.css
@@ -55,3 +55,13 @@ button:disabled {
 	width: 49%;
 }
 
+.visualization {
+	width: 40%;
+	padding: 5%;
+}
+
+.demo-text {
+	width: 49%;
+	padding: 3%;
+	text-align: left;
+}
