--- a/src/Components/Layout/IntroText.css
+++ b/src/Components/Layout/IntroText.css
@@ -29,3 +29,17 @@ p {
 ul {
     list-style-type: disc;
 }
+
+.introduction-top {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+.introduction-text {
+    width: 500px;
+    flex-shrink: 0;
+}
+#intro-video {
+    min-width: 200px;
+    max-width: 500px;
+}
