--- a/src/Components/Layout/IntroText.css
+++ b/src/Components/Layout/IntroText.css
@@ -11,7 +11,7 @@ h3 {
     
     font-size: 20px;
     text-align: left;
-    padding-top: 2%;
+    
 }
 .topic {
     font-family: 'Lato', sans-serif;
@@ -34,12 +34,25 @@ ul {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    padding-top: 40px;
 }
 .introduction-text {
-    width: 500px;
-    flex-shrink: 0;
+    min-width: 200px;
+    max-width: 500px;
+    margin-left: 5%;
+    margin-right: 5%;
 }
 #intro-video {
     min-width: 200px;
     max-width: 500px;
+    margin-left: 2%;
+    margin-right: 2%;
+}
+.intro-image {
+    min-width: 200px;
+    max-width: 500px;
+    margin-left: 2%;
+    margin-right: 2%;
 }
