--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,6 @@
 .App {
+	display: flex;
+	flex-direction: column;
 	text-align: center;
 }
 
@@ -10,25 +12,32 @@
 .display-wrap {
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
 	overflow-y: scroll;
 }
 
 #buttons {
 	display: flex;
 	flex-direction: row;
+	flex-wrap: wrap;
 	justify-content: flex-start;
 }
+
 button {
 	flex-basis: 15%;
 	background-color: rgb(14, 131, 248);
 	border: none;
 	border-radius: 4px;
-	margin-right: 20px;
-	margin-left: 40px;
+	margin-top: 20px;
+	margin-right: 25px;
+	margin-bottom: 10px;
+	margin-left: 25px;
 	color: white;
 	text-align: center;
 	padding: 10px 24px;
 	font-size: 16px;
+	font-family: 'Lato', sans-serif;
+    font-size: 15px;
 	display: inline-block;
 	cursor: pointer;
 }
@@ -53,7 +62,7 @@ button:disabled {
 }
 
 .visualization {
-	width: 40%;
+	max-width: 40%;
 	padding: 5%;
 }
 
