--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,7 @@
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: flex-start;
+	margin-top: 10px;
 }
 
 button {
@@ -28,9 +29,9 @@ button {
 	background-color: rgb(14, 131, 248);
 	border: none;
 	border-radius: 4px;
-	margin-top: 20px;
+	
 	margin-right: 25px;
-	margin-bottom: 10px;
+	
 	margin-left: 25px;
 	color: white;
 	text-align: center;
@@ -40,6 +41,7 @@ button {
     font-size: 15px;
 	display: inline-block;
 	cursor: pointer;
+	z-index: 1;
 }
 
 button:hover {
@@ -52,6 +54,14 @@ button:disabled {
 	cursor: not-allowed;
 }
 
+.header-wrap {
+	background: rgba(241, 241, 241, 0.877);
+	height: 180px;
+	z-index: 0;
+}
+#entire-introduction {
+	background: #202327;
+}
 #introduction-text {
 	width: 49%;
 	padding: 40px;
