--- a/src/Components/Layout/Header.css
+++ b/src/Components/Layout/Header.css
@@ -2,36 +2,52 @@
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    min-height: 120px;
+    justify-content: center;
+    min-height: 80px;
+    max-height: 80px;
+    padding-top: 15px;
+    
+}
+.title-container {
+    position: relative;
+    min-width: 800px;
+    max-height: 80px;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
     
 }
 
 .title-header #project-title {
-    position: absolute;
-    left: 10px;
-    top: 4%;
-    height: 80px;
+   
     
-    padding-left: 10%;
+   
+    margin: 0 0 0 0;
+    
+    float: left;
+    
 	font-family: 'Roboto', sans-serif;
 	font-weight: 800;
     font-size: 40px;
-    text-align: left;
+    text-align: center;
+    line-height: 80px;
+    overflow: hidden;
     cursor: pointer;
-	
+	z-index: 1;
 }
 
 .title-header #github-button {
-    
-    position: absolute;
+    height: 20px;
+    float: right;
+    margin-top: 20px;
     border-radius: 4%;
-    top: 13%;
-    right: 5%;
+    
 	background-color: rgb(236, 233, 233);
 	color: rgb(31, 31, 31);
     text-decoration: none;
     font-family: 'Lato', sans-serif;
     font-size: 15px;
     padding: 10px 24px;
-    
+    white-space: nowrap;
+    z-index: 1;
 }
