--- a/src/Components/Layout/IntroText.css
+++ b/src/Components/Layout/IntroText.css
@@ -1,3 +1,7 @@
+body {
+    margin: 0;
+}
+
 h2 {
     font-family: 'Roboto', sans-serif;
     font-weight: 300;
@@ -30,29 +34,56 @@ ul {
     list-style-type: disc;
 }
 
+
 .introduction-top {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+    min-height: 400px;
     align-items: center;
     padding-top: 40px;
+    z-index: -99;
+    
+}
+.video-text {
+    min-width: 200px;
+    max-width: 410px;
+    float: left;
+    position: absolute;
+    left: 0;
+    color: lightgray;
+    z-index: 2;
+    padding-top: 3em;
+    padding-left: 20px;
+    background: #0000008e;
+    box-shadow: 50px 0px 50px #00000082;
+    
+}
+#intro-video {
+    min-width: 100%;
+    
+    max-width: 100%;
+    width: auto;
+    height: auto;
+    z-index: 1;
+}
+
+.intro-image {
+    float: right;
+    max-width: 45%;
+    margin-top: 2%;
+    margin-left: 2%;
+    margin-right: 40px;
+    object-fit: contain;
+    z-index: 1;
 }
 .introduction-text {
     min-width: 200px;
-    max-width: 500px;
-    margin-left: 5%;
-    margin-right: 5%;
-}
-#intro-video {
-    min-width: 200px;
-    max-width: 500px;
-    margin-left: 2%;
-    margin-right: 2%;
-}
-.intro-image {
-    min-width: 200px;
-    max-width: 500px;
-    margin-left: 2%;
-    margin-right: 2%;
+    max-width: 410px;
+    float: left;
+    position: absolute;
+    left: 0;
+    color: lightgray;
+    z-index: 2;
+    padding-top: 1em;
+    padding-left: 40px;
+    
+    
 }
