--- a/src/Components/Layout/IntroText.css
+++ b/src/Components/Layout/IntroText.css
@@ -4,8 +4,8 @@ body {
 
 h2 {
     font-family: 'Roboto', sans-serif;
-    font-weight: 300;
-    font-size: 23px;
+    font-weight: 100;
+    font-size: 28px;
     text-align: left;
     
 }
@@ -18,15 +18,27 @@ h3 {
     
 }
 .topic {
-    font-family: 'Lato', sans-serif;
-    font-weight: 400;
-    font-size: 17px;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 500;
+    font-size: 20px;
     text-align: left;
 }
-
+.instruction {
+    font-family: 'Lato', sans-serif;
+    font-weight: 300;
+    font-size: 18px;
+    text-align: left;
+}
 p {
     font-family: 'Lato', sans-serif;
-    font-size: 15px;
+    font-weight: 300;
+    font-size: 20px;
+    text-align: left;
+}
+.intro-text {
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    font-size: 20px;
     text-align: left;
 }
 
@@ -42,35 +54,44 @@ ul {
     z-index: -99;
     
 }
+
+.video-top {
+    min-width: 100%;
+    max-width: 100%;
+    height: fit-content;
+    position: relative;
+   
+}
 .video-text {
-    min-width: 200px;
+    
     max-width: 410px;
-    float: left;
+    min-height: 25%;
+   
     position: absolute;
-    left: 0;
     color: lightgray;
     z-index: 2;
-    padding-top: 3em;
+    
     padding-left: 20px;
     background: #0000008e;
     box-shadow: 50px 0px 50px #00000082;
+    top: 5em;
     
 }
 #intro-video {
     min-width: 100%;
     
     max-width: 100%;
-    width: auto;
-    height: auto;
+    
     z-index: 1;
 }
 
 .intro-image {
     float: right;
-    max-width: 45%;
+    max-width: 38%;
+    max-height: 38%;
     margin-top: 2%;
     margin-left: 2%;
-    margin-right: 40px;
+    margin-right: 80px;
     object-fit: contain;
     z-index: 1;
 }
@@ -83,7 +104,7 @@ ul {
     color: lightgray;
     z-index: 2;
     padding-top: 1em;
-    padding-left: 40px;
+    padding-left: 80px;
     
     
 }
