--- a/src/App.css
+++ b/src/App.css
@@ -36,7 +36,6 @@ button {
 	color: white;
 	text-align: center;
 	padding: 10px 24px;
-	font-size: 16px;
 	font-family: 'Lato', sans-serif;
     font-size: 15px;
 	display: inline-block;
@@ -80,4 +79,34 @@ button:disabled {
 	width: 49%;
 	padding: 3%;
 	text-align: left;
+}
+
+@media only screen and (max-width: 897px) {
+    button {
+		flex-basis: 15%;
+		background-color: rgb(14, 131, 248);
+		border: none;
+		border-radius: 4px;
+		
+		margin-right: 2px;
+		
+		margin-left: 2px;
+		color: white;
+		text-align: center;
+		padding: 10px 24px;
+		font-family: 'Lato', sans-serif;
+		font-size: 12px;
+		display: inline-block;
+		cursor: pointer;
+		z-index: 1;
+	}
+}
+@media only screen and (max-width: 897px) {
+    #buttons {
+		display: flex;
+		flex-direction: row;
+		flex-wrap: wrap;
+		justify-content: center;
+		margin-top: 10px;
+	}
 }
