--- a/src/Components/Layout/IntroText.css
+++ b/src/Components/Layout/IntroText.css
@@ -48,9 +48,14 @@ ul {
 
 
 .introduction-top {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
     min-height: 400px;
     align-items: center;
     padding-top: 40px;
+    overflow: auto;
     z-index: -99;
     
 }
@@ -65,17 +70,38 @@ ul {
 .video-text {
     
     max-width: 410px;
+    min-width: 35%;
     min-height: 25%;
    
     position: absolute;
     color: lightgray;
     z-index: 2;
     
-    padding-left: 20px;
-    background: #0000008e;
+    padding: 1em;
+    background: #000000a4;
     box-shadow: 50px 0px 50px #00000082;
     top: 5em;
     
+}
+@media only screen and (max-width: 897px) {
+    .video-text {
+     max-width: none;
+     min-width: none;
+     min-height: none;
+
+     position: static;
+     color: lightgray;
+     z-index: 2;
+    
+     background: none;
+     box-shadow: none;
+  
+
+     margin-right: 5%;
+     margin-left: 5%;
+    
+    
+    }
 }
 #intro-video {
     min-width: 100%;
@@ -88,10 +114,12 @@ ul {
 .intro-image {
     float: right;
     max-width: 38%;
-    max-height: 400px;
+    min-width: 25em;
+    max-height: 38%;
     margin-top: 2%;
-    margin-left: 2%;
-    margin-right: 80px;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 5%;
     object-fit: contain;
     z-index: 1;
 }
@@ -99,12 +127,12 @@ ul {
     min-width: 200px;
     max-width: 480px;
     float: left;
-    position: absolute;
     left: 0;
     color: lightgray;
     z-index: 2;
-    padding-top: 1em;
-    padding-left: 80px;
+    padding: 1em;
+    margin-left: 5%;
+    margin-right: 5%;
     
     
 }
@@ -119,10 +147,23 @@ pre {
     font-size: 10px;
     line-height: 1.6;
     margin-bottom: 1.6em;
-    max-width: 480px;
+    max-width: 200px;
     overflow: auto;
     padding: 1em 1.5em;
     display: block;
     word-wrap: normal;
     text-align: left;
+    margin-right: 5em;
+}
+
+.code-text {
+    display: flex;
+    flex-direction: row;
+}
+@media only screen and (max-width: 1218px) {
+    .introduction-text {
+        
+        max-width: none;
+        
+    }
 }
