--- a/src/App.css
+++ b/src/App.css
@@ -93,7 +93,7 @@ button:disabled {
 		margin-left: 2px;
 		color: white;
 		text-align: center;
-		padding: 10px 24px;
+		padding: 10px 15px 10px 15px;
 		font-family: 'Lato', sans-serif;
 		font-size: 12px;
 		display: inline-block;
@@ -102,11 +102,33 @@ button:disabled {
 	}
 }
 @media only screen and (max-width: 897px) {
+	html {
+		width: 100%;
+		overflow-x: hidden;
+	}
     #buttons {
-		display: flex;
-		flex-direction: row;
-		flex-wrap: wrap;
-		justify-content: center;
-		margin-top: 10px;
+		display: inline-block;
+		margin-top: 2.5em;
+	}
+}
+
+@media only screen and (max-width: 370px) {
+    button {
+		flex-basis: 15%;
+		background-color: rgb(14, 131, 248);
+		border: none;
+		border-radius: 4px;
+		
+		margin-right: 2px;
+		
+		margin-left: 2px;
+		color: white;
+		text-align: center;
+		padding: 10px 15px 10px 15px;
+		font-family: 'Lato', sans-serif;
+		font-size: 10px;
+		display: inline-block;
+		cursor: pointer;
+		z-index: 1;
 	}
 }
