--- a/src/Components/Layout/Header.css
+++ b/src/Components/Layout/Header.css
@@ -50,7 +50,24 @@
     z-index: 1;
 }
 
+
+
 @media only screen and (max-width: 897px) {
+    .title-header #github-button {
+        height: 20px;
+        float: none;
+        margin-top: 20px;
+        border-radius: 4%;
+        
+        background-color: rgb(236, 233, 233);
+        color: rgb(31, 31, 31);
+        text-decoration: none;
+        font-family: 'Lato', sans-serif;
+        font-size: 15px;
+        padding: 10px 24px;
+        white-space: nowrap;
+        z-index: 1;
+    }
     .title-header #project-title {
 
         margin: 0 0 0 0;
@@ -67,21 +84,20 @@
         z-index: 1;
     }
 }
+@media only screen and (max-width: 370px) {
+    .title-header #project-title {
 
-@media only screen and (max-width: 897px) {
-    .title-header #github-button {
-        height: 20px;
-        float: none;
-        margin-top: 20px;
-        border-radius: 4%;
+        margin: 0 0 0 0;
         
-        background-color: rgb(236, 233, 233);
-        color: rgb(31, 31, 31);
-        text-decoration: none;
-        font-family: 'Lato', sans-serif;
-        font-size: 15px;
-        padding: 10px 24px;
-        white-space: nowrap;
+        float: none;
+        
+        font-family: 'Roboto', sans-serif;
+        font-weight: 800;
+        font-size: 20px;
+        text-align: center;
+        line-height: 80px;
+        overflow: hidden;
+        cursor: pointer;
         z-index: 1;
     }
 }
