--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
 	flex-direction: row;
 	flex-wrap: wrap;
 	justify-content: flex-start;
-	margin-top: 10px;
+	margin-top: 0.75em;
 }
 
 button {
@@ -35,7 +35,7 @@ button {
 	margin-left: 50px;
 	color: white;
 	text-align: center;
-	padding: 10px 24px;
+	padding: 0.75em 1.5em;
 	font-family: 'Lato', sans-serif;
     font-size: 15px;
 	display: inline-block;
@@ -124,7 +124,7 @@ button:disabled {
 		margin-left: 2px;
 		color: white;
 		text-align: center;
-		padding: 10px 15px 10px 15px;
+		padding: 0.75em 1.5em 0.75em 1.5em;
 		font-family: 'Lato', sans-serif;
 		font-size: 10px;
 		display: inline-block;
