--- a/src/Components/Layout/Header.css
+++ b/src/Components/Layout/Header.css
@@ -10,8 +10,8 @@
 }
 .title-container {
     position: relative;
-    min-width: 800px;
-    max-height: 80px;
+    min-width: 50em;
+    
     position: absolute;
     margin-left: auto;
     margin-right: auto;
@@ -28,7 +28,7 @@
 	font-weight: 800;
     font-size: 40px;
     text-align: center;
-    line-height: 80px;
+    line-height: 2em;
     overflow: hidden;
     cursor: pointer;
 	z-index: 1;
@@ -45,7 +45,7 @@
     text-decoration: none;
     font-family: 'Lato', sans-serif;
     font-size: 15px;
-    padding: 10px 24px;
+    padding: 0.75em 1.5em;
     white-space: nowrap;
     z-index: 1;
 }
