--- a/src/Components/Layout/IntroText.css
+++ b/src/Components/Layout/IntroText.css
@@ -88,26 +88,7 @@ ul {
     top: 5em;
     
 }
-@media only screen and (max-width: 897px) {
-    .video-text {
-     max-width: none;
-     min-width: none;
-     min-height: none;
 
-     position: static;
-     color: lightgray;
-     z-index: 2;
-    
-     background: none;
-     box-shadow: none;
-  
-
-     margin-right: 5%;
-     margin-left: 5%;
-    
-    
-    }
-}
 #intro-video {
     min-width: 100%;
     
@@ -175,15 +156,15 @@ ul {
 }
 
 .large-code {
-    background: #f4f4f4;
-    border: 1px solid #ddd;
-    border-left: 3px solid #f36d33;
-    color: #666;
+    background: rgb(240, 240, 240);
+    border: 1px solid rgb(218, 218, 218);
+    border-left: 5px solid #f5510b;
+    color: rgb(82, 82, 82);
     page-break-inside: avoid;
     font-family: monospace;
     font-size: 10px;
     line-height: 1.6;
-    margin-bottom: 1.6em;
+    margin-bottom: 3.5em;
     min-width: 25em;
     max-width: 100%;
     overflow: auto;
@@ -226,6 +207,28 @@ ul {
        
     }
 }
+
+@media only screen and (max-width: 897px) {
+    .video-text {
+     max-width: none;
+     min-width: none;
+     min-height: none;
+
+     position: static;
+     color: lightgray;
+     z-index: 2;
+    
+     background: none;
+     box-shadow: none;
+  
+
+     margin-right: 5%;
+     margin-left: 5%;
+    
+    
+    }
+}
+
 @media only screen and (max-width: 585px) {
     .code-text {
       display: flex;
