--- a/src/Components/Layout/IntroText.css
+++ b/src/Components/Layout/IntroText.css
@@ -145,7 +145,7 @@ ul {
 .small-code {
     background: #f4f4f4;
     border: 1px solid #ddd;
-    border-left: 3px solid #f36d33;
+    border-left: 3px solid #f5510b;
     color: #666;
     page-break-inside: avoid;
     font-family: monospace;
@@ -201,20 +201,15 @@ ul {
 
 @media only screen and (max-width: 1218px) {
     .introduction-text {
-        
         max-width: none;
-        
     }
     
     .intro-code {
-        
         max-width: none;
         min-width: none;
         
-        
         margin-left: none;
         margin-right: none;
-       
     }
 }
 
